tests/fixtures/valid/crazy/builtins/iter.py
# Valid iter() calls
# Auto-generated by scripts/generate_tests.py

b0_iter_str = iter("hello")
b1_iter_bytes = iter(b"hello")
b2_iter_list = iter([1, 2, 3])
b3_iter_dict = iter({"a": 1})
b4_iter_set = iter({1, 2, 3})

print("iter() tests passed!")
