tests/fixtures/invalid/round_set_str.py
# Cannot call round() with Set[int], Str
x = round({1, 2, 3}, "hello")
